# aether-vec

./: .gitignore  Makefile  README.md
.github/: gemini-review.yml
core/: Cargo.toml  README.md
core/src/: background_context.rs  collection.rs  compact.rs  constant.rs  context.rs  database.rs  document.rs  error.rs  index.rs  lib.rs  memtable.rs  search.rs  sst.rs  test_utils.rs  tests.rs  utils.rs  wal.rs
core/src/tests/: database.rs  integration.rs  utils.rs
