[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
criterion = "0.8.1"
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
flamegraph = "0.6.10"
fs2 = "0.4.3"
rstest = "0.26.1"
serde = "1.0.228"
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[dev-dependencies]
fake = { version = "4.4.0", features = ["uuid"] }
rand = "0.9.2"
tempfile = "3.24.0"
